--- a/lesson-4/src/main/webapp/WEB-INF/view/product.html
+++ b/lesson-4/src/main/webapp/WEB-INF/view/product.html
@@ -26,11 +26,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Products</a>
-            </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Users</a>
+                <a class="nav-link" href="./product">Products</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="./user">Users</a>
             </li>
         </ul>
 
