--- a/lesson-4/src/main/webapp/WEB-INF/view/userEdit.html
+++ b/lesson-4/src/main/webapp/WEB-INF/view/userEdit.html
@@ -42,7 +42,7 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <form th:action="@{/user}" method="post" th:object="${user}">
+            <form th:action="@{/user/userEdit}" method="post" th:object="${user}">
                 <input th:type="hidden" th:field="*{id}">
                 <div class="form-group">
                     <label for="name">Name</label>
