--- a/lesson-4/src/main/webapp/WEB-INF/view/users.html
+++ b/lesson-4/src/main/webapp/WEB-INF/view/users.html
@@ -26,10 +26,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Products</a>
+                <a class="nav-link" href="./product">Products</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Users</a>
+                <a class="nav-link" href="./user">Users</a>
             </li>
         </ul>
 
@@ -45,17 +45,17 @@
             <a class="btn btn-primary" th:href="@{/user/new}">Add User</a>
         </div>
 
-        <div class="col-12">
+        <div class="col-12 mt-3">
             <form>
                 <label for="minAge">Min Age</label>
-                <input type="number" name="minAge" id="minAge">
+                <input type="number" name="minAge" id="minAge" th:value="${param.minAge}"/>
 
                 <label for="maxAge">Max Age</label>
-                <input type="number" name="maxAge" id="maxAge">
+                <input type="number" name="maxAge" id="maxAge" th:value="${param.maxAge}"/>
 
                 <button class="btn btn-primary" type="submit">Filter</button>
             </form>
-
+        </div>
         </div>
 
         <div class="col-12">
@@ -69,15 +69,16 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr hidden>
+                <tr th:unless="${usersPage.hasContent()}"  hidden>
                     <td class="text-center" colspan="5">No data</td>
                 </tr>
-                <tr th:each="user : ${users}">
+                <tr th:if="${usersPage.hasContent()}" th:each="user : ${usersPage.content}">
                     <th scope="row" th:text="${user.id}">1</th>
                     <td th:text="${user.name}">Alex</td>
                     <td th:text="${user.age}">21</td>
+                    <td th:text="${user.email}">aaa@aaa.ru</td>
                     <td>
-                        <a class="btn btn-success" href="#"><i class="fas fa-edit"></i></a>
+                        <a class="btn btn-success" th:href="@{/user/edit}"><i class="fas fa-edit"></i></a>
                         <a class="btn btn-danger" href="#"><i class="far fa-trash-alt"></i></a>
                     </td>
                 </tr>
@@ -85,23 +86,34 @@
             </table>
         </div>
 
-        <div class="col-12">
-            <nav aria-label="...">
-                <ul class="pagination">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1">Previous</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item active">
-                        <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+    <div class="col-12" th:if="${usersPage.hasContent()}">
+        <nav aria-label="...">
+            <ul class="pagination">
+                <li class="page-item"
+                    th:classappend="${!usersPage.hasPrevious()} ? 'disabled'">
+
+                    <a class="page-link"
+                       th:href="@{/user(page=${prevPageNumber}, size=${usersPage.size}, minAge=${param.minAge}, maxAge=${param.maxAge})}" tabindex="-1">Previous</a>
+                </li>
+
+                <li th:each="num: ${#numbers.sequence(1, usersPage.totalPages)}"
+                    th:classappend="${num == usersPage.number + 1} ? 'active'"
+                    class="page-item">
+
+                    <a class="page-link"
+                       th:text="${num}"
+                       th:href="@{/user(page=${num}, size=${usersPage.size}, minAge=${param.minAge}, maxAge=${param.maxAge})}">1</a>
+                </li>
+
+                <li class="page-item"
+                    th:classappend="${!usersPage.hasNext()} ? 'disabled'">
+
+                    <a class="page-link"
+                       th:href="@{/user(page=${nextPageNumber}, size=${usersPage.size}, minAge=${param.minAge}, maxAge=${param.maxAge})}">Next</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     </div>
 
     </div>
