--- a/lesson6/src/main/resources/templates/users.html
+++ b/lesson6/src/main/resources/templates/users.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <!-- Required meta tags -->
@@ -33,8 +34,10 @@
             </li>
         </ul>
 
-        <form class="form-inline my-2 my-lg-0" action="#" method="post">
-            <button class="btn btn-outline-success my-2 my-sm-0">Logout</button>
+        <form sec:authorize="isAuthenticated()" class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post">
+            <button class="btn btn-outline-success my-2 my-sm-0">
+                Logout <span sec:authentication="principal.username"></span>
+            </button>
         </form>
     </div>
 </nav>
@@ -53,6 +56,9 @@
                 <label for="maxAge">Max Age</label>
                 <input type="number" name="maxAge" id="maxAge" th:value="${param.maxAge}"/>
 
+                <label for="username">User name</label>
+                <input type="text" name="username" id="username" th:value="${param.username}"/>
+
                 <button class="btn btn-primary" type="submit">Filter</button>
             </form>
         </div>
@@ -69,17 +75,27 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:unless="${usersPage.hasContent()}"  hidden>
+                <tr th:unless="${usersPage.hasContent()}">
                     <td class="text-center" colspan="5">No data</td>
                 </tr>
                 <tr th:if="${usersPage.hasContent()}" th:each="user : ${usersPage.content}">
                     <th scope="row" th:text="${user.id}">1</th>
                     <td th:text="${user.name}">Alex</td>
                     <td th:text="${user.age}">21</td>
-                    <td th:text="${user.email}">aaa@aaa.ru</td>
                     <td>
-                        <a class="btn btn-success" th:href="@{/user/edit}"><i class="fas fa-edit"></i></a>
-                        <a class="btn btn-danger" href="#"><i class="far fa-trash-alt"></i></a>
+<!--                        <form th:action="@{/user(id=${user.id})}" th:method="delete">-->
+<!--                            <a class="btn btn-success" th:href="@{/user/edit(id=${user.id})}">-->
+<!--                                <i class="fas fa-edit"></i>-->
+<!--                            </a>-->
+<!--                            <button class="btn btn-danger">-->
+<!--                                <i class="far fa-trash-alt"></i>-->
+<!--                            </button>-->
+<!--                        </form>-->
+                        <a class="btn btn-success" th:href="@{/user/edit(id=${user.id})}"><i
+                                class="fas fa-edit"></i></a>
+                        <form th:action="@{/user(id=${user.id})}" th:method="delete" >
+                            <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+                        </form>
                     </td>
                 </tr>
                 </tbody>
